--- a/MVC/4/DomeApp/DomeApp/Web.config
+++ b/MVC/4/DomeApp/DomeApp/Web.config
@@ -13,6 +13,9 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DomeApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DomeApp;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
@@ -115,6 +118,11 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <elmah>
-  </elmah>
+  <applicationSettings>
+    <DomeApp.Properties.Settings>
+      <setting name="PageSize" serializeAs="String">
+        <value>10</value>
+      </setting>
+    </DomeApp.Properties.Settings>
+  </applicationSettings>
 </configuration>
