--- a/MVC/4/DomeApp/DomeApp/Views/Web.config
+++ b/MVC/4/DomeApp/DomeApp/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="DomeApp.Extensions"/>
+        <add namespace="DomeApp.Code.Paging"/>
         <add namespace="DomeApp.Models"/>
       </namespaces>
     </pages>
