Neat up permissions

--- a/MVC/4/DomeApp/DomeApp/Views/Web.config
+++ b/MVC/4/DomeApp/DomeApp/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="DomeApp.Code.Paging"/>
+        <add namespace="DomeApp.Code"/>
         <add namespace="DomeApp.Models"/>
       </namespaces>
     </pages>
