--- a/MVC/4/DomeApp/DomeApp/Web.config
+++ b/MVC/4/DomeApp/DomeApp/Web.config
@@ -38,6 +38,7 @@
     <customErrors mode="RemoteOnly"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <roleManager enabled="true"/>
     <caching>
       <outputCacheSettings>
         <outputCacheProfiles>
