--- a/MVC/4/DomeApp/DomeApp/DomeApp.csproj
+++ b/MVC/4/DomeApp/DomeApp/DomeApp.csproj
@@ -203,23 +203,47 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Code\HtmlExtensions.cs" />
     <Compile Include="Code\MarkdownCodeTransformers.cs" />
     <Compile Include="Code\Paging\IPagedList.cs" />
     <Compile Include="Code\Paging\PagedList.cs" />
     <Compile Include="Code\Paging\PagingExtensions.cs" />
     <Compile Include="Code\SecurityExtensions.cs" />
     <Compile Include="Code\TextExtensions.cs" />
+    <Compile Include="Code\UriExtensions.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BlogPostController.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201401122202088_DefaultConnection.cs" />
+    <Compile Include="Migrations\201401122202088_DefaultConnection.Designer.cs">
+      <DependentUpon>201401122202088_DefaultConnection.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201401131223012_DefaultConnection1.cs" />
+    <Compile Include="Migrations\201401131223012_DefaultConnection1.Designer.cs">
+      <DependentUpon>201401131223012_DefaultConnection1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201401132051442_DefaultConnection2.cs" />
+    <Compile Include="Migrations\201401132051442_DefaultConnection2.Designer.cs">
+      <DependentUpon>201401132051442_DefaultConnection2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201401132137479_DefaultConnection3.cs" />
+    <Compile Include="Migrations\201401132137479_DefaultConnection3.Designer.cs">
+      <DependentUpon>201401132137479_DefaultConnection3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201401132140402_CreatedDateForComments.cs" />
+    <Compile Include="Migrations\201401132140402_CreatedDateForComments.Designer.cs">
+      <DependentUpon>201401132140402_CreatedDateForComments.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\BlogPost.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\DomeAppContext.cs" />
     <Compile Include="Models\RepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -357,6 +381,13 @@
     <Content Include="Views\Shared\Pager.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
+    <Content Include="Views\Comment\Index.cshtml" />
+    <Content Include="Views\Comment\Details.cshtml" />
+    <Content Include="Views\Comment\Create.cshtml" />
+    <Content Include="Views\Comment\Edit.cshtml" />
+    <Content Include="Views\Comment\Delete.cshtml" />
+    <Content Include="Views\Comment\CommentsByPost.cshtml" />
+    <Content Include="Views\Comment\CommentsFrom.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -365,6 +396,21 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Migrations\201401122202088_DefaultConnection.resx">
+      <DependentUpon>201401122202088_DefaultConnection.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201401131223012_DefaultConnection1.resx">
+      <DependentUpon>201401131223012_DefaultConnection1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201401132051442_DefaultConnection2.resx">
+      <DependentUpon>201401132051442_DefaultConnection2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201401132137479_DefaultConnection3.resx">
+      <DependentUpon>201401132137479_DefaultConnection3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201401132140402_CreatedDateForComments.resx">
+      <DependentUpon>201401132140402_CreatedDateForComments.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
