--- a/MVC/4/DomeApp/DomeApp/Properties/Settings.settings
+++ b/MVC/4/DomeApp/DomeApp/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="PageSize" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="CommentsPageSize" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">20</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
