--- a/MVC/4/DomeApp/DomeApp/Web.config
+++ b/MVC/4/DomeApp/DomeApp/Web.config
@@ -124,6 +124,9 @@
       <setting name="PageSize" serializeAs="String">
         <value>10</value>
       </setting>
+      <setting name="CommentsPageSize" serializeAs="String">
+        <value>20</value>
+      </setting>
     </DomeApp.Properties.Settings>
   </applicationSettings>
 </configuration>
