--- a/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
@@ -71,6 +71,9 @@
       <Name>LightPlayer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ProductDescription.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
