--- a/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
@@ -67,6 +67,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="FolderViewModel.cs" />
+    <Compile Include="IFolder.cs" />
+    <Compile Include="IFolderViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
