--- a/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
@@ -61,6 +61,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestContext.cs" />
     <Compile Include="UnitTestFolderViewModel.cs">
       <SubType>Code</SubType>
     </Compile>
