--- a/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
@@ -62,6 +62,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestContext.cs" />
+    <Compile Include="UnitTestFolder.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UnitTestFolderViewModel.cs">
       <SubType>Code</SubType>
     </Compile>
