--- a/C#/Desktop/LightPlayer/LightPlayerTests/packages.config
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1312.1622" targetFramework="net45" />
+  <package id="Prism" version="4.1.0.0" targetFramework="net45" />
 </packages>
