Select command adds a real folder

--- a/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
@@ -74,6 +74,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DialogResult.cs" />
+    <Compile Include="ISelectDialog.cs" />
+    <Compile Include="SelectDialogMode.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="Views\Folders.xaml.cs">
       <DependentUpon>Folders.xaml</DependentUpon>
