Refactoring: Move dependency container into the application Move dependency container into the application so tests are as close as possible to the application behavior.

--- a/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
@@ -76,6 +76,7 @@
     </ApplicationDefinition>
     <Compile Include="DialogResult.cs" />
     <Compile Include="ISelectDialog.cs" />
+    <Compile Include="SelectDialog.cs" />
     <Compile Include="SelectDialogMode.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="Views\Folders.xaml.cs">
