--- a/C#/Desktop/LightPlayer/LightPlayerTests/packages.config
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/packages.config
@@ -5,4 +5,6 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1312.1622" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
+  <package id="WindowsAPICodePack-Core" version="1.1" targetFramework="net45" />
+  <package id="WindowsAPICodePack-Shell" version="1.1" targetFramework="net45" />
 </packages>
