--- a/C#/Desktop/LightPlayer/LightPlayer/packages.config
+++ b/C#/Desktop/LightPlayer/LightPlayer/packages.config
@@ -3,7 +3,9 @@
   <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.91.0" targetFramework="net45" />
   <package id="WindowsAPICodePack-Core" version="1.1" targetFramework="net45" />
   <package id="WindowsAPICodePack-Shell" version="1.1" targetFramework="net45" />
 </packages>
