--- a/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
@@ -100,6 +100,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestContext.cs" />
+    <Compile Include="UnitTestApplicationState.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UnitTestSelectDialog.cs" />
     <Compile Include="UnitTestLocators.cs" />
     <Compile Include="UnitTestFolder.cs">
