--- a/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestContext.cs" />
+    <Compile Include="UnitTestPlaylistViewModel.cs" />
     <Compile Include="UnitTestApplicationState.cs">
       <SubType>Code</SubType>
     </Compile>
