IMediaElement is a proxy for MediaElement

--- a/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
@@ -104,6 +104,7 @@
     <Compile Include="IMediaElement.cs" />
     <Compile Include="IPlaylistViewModel.cs" />
     <Compile Include="ISelectDialog.cs" />
+    <Compile Include="MediaElementProxy.cs" />
     <Compile Include="PlayListViewModel.cs" />
     <Compile Include="SelectDialog.cs" />
     <Compile Include="SelectDialogMode.cs" />
