Define hyperlink style in separate styles file

--- a/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
@@ -123,6 +123,10 @@
     <Compile Include="Views\Playlist.xaml.cs">
       <DependentUpon>Playlist.xaml</DependentUpon>
     </Compile>
+    <Page Include="Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Folders.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
