--- a/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/LightPlayerTests.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestContext.cs" />
+    <Compile Include="UnitTestFileMask.cs" />
     <Compile Include="UnitTestMediaElementProxy.cs" />
     <Compile Include="UnitTestConverters.cs" />
     <Compile Include="UnitTestPlaylistViewModel.cs" />
