--- a/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
+++ b/C#/Desktop/LightPlayer/LightPlayer/LightPlayer.csproj
@@ -98,6 +98,7 @@
     </ApplicationDefinition>
     <Compile Include="ApplicationState.cs" />
     <Compile Include="Conventions\PlaylistDependencyResolver.cs" />
+    <Compile Include="Converters\MediaInteractionConverter.cs" />
     <Compile Include="Converters\MultiValueParams.cs" />
     <Compile Include="DialogResult.cs" />
     <Compile Include="FileMask.cs" />
