--- a/MVC/4/DomeApp/DomeApp/packages.config
+++ b/MVC/4/DomeApp/DomeApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AntiXSS" version="4.2.1" targetFramework="net45" />
+  <package id="bootstrap" version="3.0.3" targetFramework="net45" />
   <package id="ColorCode" version="1.0.1" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
@@ -11,7 +12,7 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
-  <package id="jQuery" version="1.8.2" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
@@ -38,5 +39,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
