Implemented bootstrap design

--- a/MVC/4/DomeApp/DomeApp/DomeApp.csproj
+++ b/MVC/4/DomeApp/DomeApp/DomeApp.csproj
@@ -367,6 +367,7 @@
     <Content Include="Views\Comment\Delete.cshtml" />
     <Content Include="Views\Comment\CommentsByPost.cshtml" />
     <Content Include="Views\Comment\Edit.cshtml" />
+    <Content Include="Views\Shared\_UserActions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
