--- a/MVC/4/DomeApp/DomeApp.Tests/DomeApp.Tests.csproj
+++ b/MVC/4/DomeApp/DomeApp.Tests/DomeApp.Tests.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Features\UnitTest1.cs" />
+    <Compile Include="Features\UnitTestPagedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
