--- a/MVC/4/DomeApp/DomeApp/DomeApp.csproj
+++ b/MVC/4/DomeApp/DomeApp/DomeApp.csproj
@@ -225,6 +225,12 @@
     <Compile Include="Migrations\201401141223298_Live.Designer.cs">
       <DependentUpon>201401141223298_Live.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201402221430448_UserDisplayName.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Migrations\201402221430448_UserDisplayName.Designer.cs">
+      <DependentUpon>201402221430448_UserDisplayName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\BlogPost.cs" />
@@ -382,6 +388,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201401141223298_Live.resx">
       <DependentUpon>201401141223298_Live.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201402221430448_UserDisplayName.resx">
+      <DependentUpon>201402221430448_UserDisplayName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
