--- a/MVC/4/DomeApp/DomeApp/DomeApp.csproj
+++ b/MVC/4/DomeApp/DomeApp/DomeApp.csproj
@@ -231,6 +231,12 @@
     <Compile Include="Migrations\201402221430448_UserDisplayName.Designer.cs">
       <DependentUpon>201402221430448_UserDisplayName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201402221520288_RequiredUserDetails.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Migrations\201402221520288_RequiredUserDetails.Designer.cs">
+      <DependentUpon>201402221520288_RequiredUserDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\BlogPost.cs" />
@@ -391,6 +397,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201402221430448_UserDisplayName.resx">
       <DependentUpon>201402221430448_UserDisplayName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201402221520288_RequiredUserDetails.resx">
+      <DependentUpon>201402221520288_RequiredUserDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
