Set expectations from this project

--- a/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/CouchBaseResearch.Tests.csproj
+++ b/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/CouchBaseResearch.Tests.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="Objectives.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
