Configured the connection to Couchbase

--- a/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/App.config
+++ b/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/App.config
@@ -4,6 +4,16 @@
     that apply only to the Test project.
 -->
 <configuration>
+	<configSections>
+		<section name="couchbase" type="Couchbase.Configuration.CouchbaseClientSection, Couchbase"/>
+	</configSections>
+
+	<couchbase>
+		<servers bucket="beer-bucket" bucketPassword="">
+			<add uri="http://127.0.0.1:8091/pools"/>
+		</servers>
+	</couchbase>
+
     <appSettings>
 
     </appSettings>
