Separate database used for unit tests

--- a/C#/Desktop/LightPlayer/LightPlayer/App.config
+++ b/C#/Desktop/LightPlayer/LightPlayer/App.config
@@ -25,4 +25,8 @@
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".Net Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+	<connectionStrings>
+		<add name="LightPlayer.ApplicationStateConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=LightPlayer.ApplicationState;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+</configuration>
