--- a/C#/Desktop/LightPlayer/LightPlayerTests/App.config
+++ b/C#/Desktop/LightPlayer/LightPlayerTests/App.config
@@ -11,15 +11,19 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<system.data>
+  <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite" />
       <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".Net Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+	<connectionStrings>
+		<add name="LightPlayer.ApplicationStateConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=LightPlayer.Test.ApplicationState;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+</configuration>
